--- a/find.html
+++ b/find.html
@@ -59,7 +59,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">My Github Account Link</div>
-                                <div><a href="https://github.com/Fahim-ok">Piazza Platform</a></div>
+                                <div><a href="https://github.com/Fahim-ok">Github</a></div>
                                 
                             </div>
                         </div>
